--- a/src/components/App/application.css
+++ b/src/components/App/application.css
@@ -1,7 +1,9 @@
 .appBanner {
     padding: 20px 10px;
+    margin: 0 0 20px;
     background: #15448b;
     color: #ffffff;
+    box-shadow: 0 2px 10px rgb(0, 0, 0, 0.5);
 }
 
 .appBanner > * {
@@ -16,4 +18,12 @@
 
 .appLogo {
     width: 70px
+}
+
+.paperPanel {
+    padding: 20px;
+}
+
+.vr {
+    margin-bottom: 20px;
 }
